Test that vroom is installed

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -127,7 +127,7 @@ USER "${USER_NAME:?}"
 # # these packages when outside of the repo (the repo is bootstrapped by .Rprofile)
 WORKDIR /
 RUN R --version && \
-    R --slave -e 'packageVersion("dplyr")'
+    R --slave -e 'packageVersion("vroom")'
 
 # Explicitly set the working directory (again) and the command to run when the
 # container is started
